# factora-core-ar

./: .gitignore  .tmp_i18n_check.py  AGENTS.md  CLAUDE.md  DEVELOPER_RUNBOOK.txt  INGESTION_AGENT_RUNBOOK.txt  NGINX_HTTPS_SETUP.md  clean_code_architect.md  cyber_security.md  docker-compose.yml  frontend_specialist.md  qa_engineer.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  ONBOARDING_API.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0acc8731db0b_invoice_status_enum_confidence_review_.py  4f1f4c1bc0c7_general_ledger_tables.py  a51bee5b8371_create_unified_invoices_table.py  a691a130c62a_stripe_billing_mirror_tables.py  b3c4d5e6f7a8_gmail_oauth_embeddings_768.py  c7d8e9f0a1b2_gl_entry_date_recognition_reversal.py  c9f1e2a3b4d5_embeddings_counterparty_fk.py  d1e2f3a4b5c6_add_is_recurring_to_invoices.py  e7f8a9b0c1d2_gmail_processed_queue_status.py  e8f9a0b1c2d3_gl_rev_schedule_line_unique_sched_month.py  f0e1d2c3b4a5_gl_line_debit_credit_check_constraints.py  f8e1c2d9b0a4_partial_org_active_indexes.py  i9j0k1l2m3n4_merge_heads_invoice_gl_link.py  j1k2l3m4n5o6_contracts_domain.py  k2l3m4n5o6p7_gl_revrec_link_contracts.py  l3m4n5o6p7q8_stripe_subscription_meters_tax_revrec.py  m4n5o6p7q8r9_stripe_invline_fks.py  n5o6p7q8r9s0_invoices_org_source_status_idx.py  (+11 more)
backend/app/: config.py  dependencies.py  main.py
backend/scripts/: backfill_aade_to_invoices.py  parse_pdf_cli.py  seed_demo_db.py  wipe_all_users.py
backend/tests/: CLAUDE.md  conftest.py  test_phase2_contracts.py  test_stripe_integration.py
(+706 files in other folders)
